Set up user database + signUp and signIn scenes.  All appear working

--- a/CS272_Capstone/src/edu/orangecoastcollege/cs272/btomita/capstone/view/SignInScene.fxml
+++ b/CS272_Capstone/src/edu/orangecoastcollege/cs272/btomita/capstone/view/SignInScene.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="CENTER" hgap="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" vgap="20.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.orangecoastcollege.cs272.ic14.view.SignInScene">
+<GridPane alignment="CENTER" hgap="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" vgap="20.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.orangecoastcollege.cs272.btomita.capstone.view.SignInScene">
    <children>
       <Label text="Email Address" />
       <TextField fx:id="emailAddressTF" GridPane.columnIndex="1" />
